--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>您的名字 - 个人主页</title>
+    <title>杨金庆 - 个人主页</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 顶部横幅 -->
     <header class="banner">
-        <h1>您的名字</h1>
-        <h2>您的实验室/团队名称</h2>
+        <h1>杨金庆</h1>
+        <h2>踏实务本的科学实验室</h2>
     </header>
 
     <!-- 导航栏 -->
@@ -28,20 +28,24 @@
     <main>
         <div class="profile-container">
             <div class="profile-image">
-                <img src="your-photo.jpg" alt="个人照片">
+                <img src="images/profile-photo.png" alt="个人照片">
             </div>
             <div class="profile-info">
-                <h2>个人简介</h2>
-                <p>您的职称</p>
-                <p>教育背景和工作经历</p>
-                <p>研究方向和兴趣领域</p>
-                <div class="contact-info">
-                    <h3>联系方式</h3>
-                    <p>邮箱：您的邮箱</p>
-                    <p>地址：您的地址</p>
-                </div>
+                <h2>洪玲玲博士</h2>
+                <p>数据科学助理教授</p>
+                <p>2019 年，马里兰大学帕克分校，信息科学博士</p>
+                <p>2014 年，北京师范大学，信息科学硕士</p>
+                <p>2011 年，北京师范大学，管理信息系统学士</p>
+                <p>电话：(940) 565-8545</p>
+                <p>电子邮件：lingzi.hong@unt.edu</p>
+                <p>地址：E292E 3940 N Elm St., 丹顿, TX, 76207</p>
             </div>
         </div>
     </main>
+
+    <!-- 页脚 -->
+    <footer>
+        <p>© 2025杨金庆. All rights reserved.</p>
+    </footer>
 </body>
 </html>
