--- a/people.html
+++ b/people.html
@@ -40,7 +40,7 @@
             
             <div class="member-card">
                 <div class="member-photo">
-                    <img src="images/profile-photo.png" alt="洪玲玲博士">
+                    <img src="profile-photo.png" alt="洪玲玲博士">
                 </div>
                 <div class="member-info">
                     <h3>洪玲玲博士</h3>
