--- a/experience.html
+++ b/experience.html
@@ -41,7 +41,7 @@
                 <div class="card-back">
                     <div class="qr-code">
                         <!-- 这里替换为你的二维码图片 -->
-                        <img src="images/qr-code.png" alt="交流群二维码">
+                        <img src="qr-code.png" alt="交流群二维码">
                     </div>
                     <p>请使用微信扫描二维码</p>
                     <button class="hide-qr-btn">返回</button>
