--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <div class="profile-container">
             <div class="profile-image">
-                <img src="images/profile-photo.png" alt="个人照片">
+                <img src="profile-photo.png" alt="个人照片">
             </div>
             <div class="profile-info">
                 <h2>洪玲玲博士</h2>
