--- a/people.html
+++ b/people.html
@@ -10,7 +10,7 @@
 <body>
     <!-- 顶部横幅 -->
     <header class="banner">
-        <h1>洪玲玲</h1>
+        <h1>杨金庆</h1>
         <h2>以人为本的计算实验室</h2>
     </header>
 
@@ -117,7 +117,7 @@
 
     <!-- 页脚 -->
     <footer>
-        <p>© 2024 洪玲玲. All rights reserved.</p>
+        <p>© 2025杨金庆. All rights reserved.</p>
     </footer>
 
     <script src="people.js"></script>
