--- a/experience.html
+++ b/experience.html
@@ -11,8 +11,8 @@
 <body>
     <!-- 顶部横幅 -->
     <header class="banner">
-        <h1>洪玲玲</h1>
-        <h2>以人为本的计算实验室</h2>
+        <h1>杨金庆</h1>
+        <h2>踏实务本的科学实验室</h2>
     </header>
 
     <!-- 导航栏 -->
@@ -52,7 +52,7 @@
 
     <!-- 页脚 -->
     <footer>
-        <p>© 2024 洪玲玲. All rights reserved.</p>
+        <p>© 2025 杨金庆. All rights reserved.</p>
     </footer>
 
     <script src="experience.js"></script>
